# light

./: AGENTS.md  README.md  README_cn.md  嵌赛报告.tex  智能无影灯嵌入式报告.tex
camera/: README.md
camera/scripts/: run_mediapipe_right_hand_demo.py  run_pc_hand_shadow_demo.py  run_ros2_perception_node.py
docs/: <!DOCTYPE html>.html  embedded_report_rdk_x5.md  设计思路.html
open_manipulator/install/: local_setup.sh  setup.sh
open_manipulator/log/: latest_build  latest_list
open_manipulator/open_manipulator_x_bringup/: package.xml
open_manipulator/tests/: test_dynamixel_workspace_layout.py  test_joint5_static_config.py  test_servo_launch_compat.py
smart_shadow_lamp_ws/: .gitignore  README.md
smart_shadow_lamp_ws/compat_lib/: libgeometric_shapes.so.2.3.4
smart_shadow_lamp_ws/scripts/: run_shadow_lamp_sim.sh
smart_shadow_lamp_ws/src/common_interfaces/: CMakeLists.txt  README.md  package.xml
smart_shadow_lamp_ws/src/common_interfaces/msg/: ArmCommand.msg  LightCommand.msg  SystemMode.msg  VisionState.msg  VoiceCommand.msg
smart_shadow_lamp_ws/src/light_control/: README.md  package.xml  setup.cfg  setup.py
smart_shadow_lamp_ws/src/light_control/launch/: light_control.launch.py
smart_shadow_lamp_ws/src/light_control/light_control/: __init__.py  light_controller_node.py  ws2812_spi.py
smart_shadow_lamp_ws/src/voice_control/: README.md  package.xml  setup.cfg  setup.py
smart_shadow_lamp_ws/src/voice_control/launch/: voice_control.launch.py
smart_shadow_lamp_ws/src/voice_control/voice_control/: __init__.py  adapter.py  voice_command_bridge.py  voice_feedback_bridge.py
smart_shadow_lamp_ws/tests/: conftest.py  test_arm_control_servo_mapper.py  test_feedback_adapter.py  test_posture_detector.py  test_posture_reminder.py  test_system_coordinator_logic.py  test_vision_bridge_adapter.py  test_voice_bridge_adapter.py  test_workspace_layout.py
voice_control/: README.md
voice_control/configs/: default.yaml
voice_control/models/: vosk-model-small-cn
voice_control/scripts/: run_remote_voice_server.py  run_voice_control.py
voice_control/tests/: test_capabilities.py  (+4 more)
(+116 files in other folders)
