<?xml version="1.0"?>
<package format="3">
  <name>shadow_lamp_interfaces</name>
  <version>0.1.0</version>
  <description>Shared ROS2 messages for the smart shadowless lamp system.</description>
  <maintainer email="dev@example.com">OpenCode</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
