<?xml version="1.0"?>
<package format="3">
  <name>light_control</name>
  <version>0.1.0</version>
  <description>Future light execution package for the smart shadow lamp system.</description>
  <maintainer email="dev@example.com">OpenCode</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>shadow_lamp_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
